apps/base/download/scdl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scdl
  namespace: download
  labels:
    app: scdl
spec:
  ports:
  - port: 8000
    targetPort: 8000
    name: scdl
  selector:
    app: scdl
