apps/base/download/scdl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scdl
  namespace: download
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: scdl.mellor.dev
    external-dns.alpha.kubernetes.io/target: proxied.mellor.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
    nginx.ingress.kubernetes.io/ssl-redirect: "false" 
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  ingressClassName: external
  rules:
  - host: scdl.mellor.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scdl
            port:
              number: 8000
  tls: 
  - secretName: scdl.mellor.dev
    hosts:
    - scdl.mellor.dev
